Extended basic particle filter code

--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -187,7 +187,7 @@
     "import pykalman, pfilter\n",
     "import ipywidgets\n",
     "import IPython\n",
-    "import matplotlib\n",
+    "import matplotlib, matplotlib.colors\n",
     "matplotlib.rcParams['figure.figsize'] = (14.0, 8.0)\n",
     "%matplotlib inline"
    ]
@@ -222,16 +222,7 @@
     "We will use a very simple model\n",
     "\n",
     "* **Dynamics**\n",
-    "We assume that there are no predictable dynamics, just some Gaussian noise $X_t = X_t+1 + \\epsilon$\n",
-    "\n",
-    "* **Evidence**\n",
-    "We assume that the sensor we measure is the value we want to infer, i.e. $Y_t=X_t$, and $g(X_t)$  is just the identity.\n",
-    "\n",
-    "* **Weighting**\n",
-    "We weight samples according to how similar they are to the observed output. We use a simple RBF kernel:\n",
-    "$$w_i = e^{\\left(-\\frac{(y-y^\\prime)^2}{2\\sigma^2}\\right)}$$\n",
-    "Note that this gives more weight to particles that are more similar to the observation: it is a **similarity** function, not a distance function.\n",
-    "\n"
+    "We assume that there are no predictable dynamics, just some Gaussian noise $X_t = X_t+1 + \\epsilon$"
    ]
   },
   {
@@ -246,16 +237,128 @@
     "def dynamics(x):\n",
     "    # tomorrow is the same as today\n",
     "    # but slightly randomly different\n",
-    "    return x+np.random.normal(0,0.1,x.shape)\n",
-    "\n",
+    "    return x+np.random.normal(0,0.1,x.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can show what this dynamics model looks like, if we had no resampling step:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def simulate_dynamics(priors, dynamics, steps, n_runs=1):\n",
+    "    runs = []\n",
+    "    def simulate_run():\n",
+    "        x = np.array([p.rvs() for p in priors])\n",
+    "        xs = [x]    \n",
+    "        for i in range(steps):\n",
+    "            x = dynamics(x)\n",
+    "            xs.append(x)\n",
+    "        return xs    \n",
+    "    return np.array([simulate_run() for j in range(n_runs)])\n",
+    "    \n",
+    "simulated = simulate_dynamics(priors=[norm(0,1)], dynamics=dynamics, steps=200, n_runs=20)   \n",
+    "plt.plot(simulated[:,:,0].T, alpha=0.3, c='C0');\n",
+    "plt.xlabel(\"Time step\")\n",
+    "plt.ylabel(\"X\")\n",
+    "plt.title(\"Simulated runs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Observation**\n",
+    "We assume that the sensor we measure is the value we want to infer, i.e. $Y_t=X_t$, and $g(X_t)$  is just the identity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def observe(x):\n",
     "    # we observe x directly\n",
-    "    return x[:,0]\n",
+    "    return x[:,0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **Weighting**\n",
+    "We weight samples according to how similar they are to the observed output. We use a simple heat kernel:\n",
+    "$$w_i = e^{\\left(-\\frac{(y-y^\\prime)^2}{2\\beta^2}\\right)}$$\n",
+    "$\\beta$ is a parameter that lets us specify how precise our matching between observation and reality is.\n",
     "\n",
+    "Note that this gives more weight to particles that are more similar to the observation: it is a **similarity** function, not a distance function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def weight(true_y, hypothesized_y):\n",
     "    # RBF similarity function\n",
-    "    return np.exp(-np.sum((true_y-hypothesized_y)**2, axis=0)/0.05)\n",
-    "    \n",
+    "    beta = 0.25\n",
+    "    return np.exp(-np.sum((true_y-hypothesized_y)**2, axis=0)/(0.5*beta**2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see what this function looks like, comparing a true value of 0 with values in [-1, 1], $\\beta=0.25$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "hypo = np.linspace(-1,1,100).reshape(1,100)\n",
+    "plt.plot(hypo.reshape(100,), weight(0, hypo))\n",
+    "plt.axvline(0,c='C1')\n",
+    "plt.xlabel(\"Hypothesized value\")\n",
+    "plt.ylabel(\"Unnormalised weight\")\n",
+    "plt.title(\"RBF kernel, $\\\\beta$=0.25\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Priors**\n",
+    "We assume a very simple prior on $X$; that it is normally distributed, mean 0, variance 1, $X_0 \\sim N(0,1)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "from scipy.stats import norm\n",
     "\n",
     "# we assume that, before seeing any evidence, that the particles are \n",
@@ -284,12 +387,23 @@
     "    output.\"\"\"\n",
     "    plt.plot(time, expected, 'C1', lw=3)\n",
     "    particles = []\n",
+    "    weights = []\n",
+    "    means = []\n",
     "    for i in range(len(x)):    \n",
     "        pfilter.update(np.array([x[i]]).reshape(1,1))\n",
     "        particles.append(pfilter.particles[:,0])    \n",
-    "    ts = np.tile(time[:,None], pfilter.n_particles)    \n",
-    "    plt.scatter(ts, np.array(particles), alpha=0.2, c='C0', s=1)\n",
-    "    plt.legend([\"True\",\"Estimated\"])\n",
+    "        weights.append(pfilter.weights)\n",
+    "        means.append(pfilter.mean_state)    \n",
+    "    ts = np.tile(time[:,None], pfilter.n_particles).ravel()\n",
+    "    weights =  np.array(weights).ravel()\n",
+    "    particles = np.array(particles).ravel()    \n",
+    "    rgba_colors = np.zeros((len(weights),4))\n",
+    "    rgba_colors[:,0:3] = matplotlib.colors.to_rgb('C2')\n",
+    "    weights *= 10\n",
+    "    rgba_colors[:, 3] = np.clip(weights, 0, 1)\n",
+    "    plt.scatter(ts, particles,  c=rgba_colors, s=2)\n",
+    "    plt.plot(time, means)\n",
+    "    plt.legend([\"True\", \"Mean estimate\", \"Particle\"])\n",
     "    "
    ]
   },
@@ -309,22 +423,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Things to note"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## A more interesting example\n",
     "Imagine we wanted to infer the **phase** of the oscillator driving this sine wave. The phase variable is not observable, but we want to infer it from the observed oscillation. Furthermore, we want the *unwrapped* phase, i.e. we expect the phase to monotonically increase.\n",
     "\n",
-    "* **Evidence**\n",
+    "We can encode these assumptions in our model, then see if the particle filter is able to infer the hidden parameter over time.\n",
+    "\n",
+    "* **Observation**\n",
     "We postulate an observation model:\n",
     "$$Y_t = \\sin(X_t)$$\n",
-    "\n",
+    "i.e. that what we see is the effect of sine on a hidden variable $X_t$.\n",
     "Because we defined $Y_t=\\sin(t)$, we are actually trying to infer $t$.\n",
     "\n",
     "* **Dynamics**\n",
-    "We assume that we have a very simple dynamical system, where we have a velocity and a position.\n",
+    "We assume that we have a very simple dynamical system in discrete time, where we have a velocity and a position.\n",
     "$$X_t = \\begin{bmatrix}x \\\\ \\dot{x}\\end{bmatrix},$$ and \n",
     "$$X_{t+1} = X_t + \\begin{bmatrix}\\dot{x} \\\\ 0 \\end{bmatrix}.$$\n",
     "\n",
+    "This means that if we start linearly increasing or decreasing at a certain rate, we should expect to keep doing so.\n",
+    "\n",
     "* **Priors**\n",
-    "We again assume that the initial distribution is normally distributed, but that the std. dev. of the velocity is smaller than the position.\n"
+    "We again assume that the initial distribution is normally distributed.\n"
    ]
   },
   {
@@ -336,23 +461,23 @@
    "outputs": [],
    "source": [
     "### Example\n",
-    "def linear_dynamics(x):    \n",
-    "    y = np.array(x)\n",
-    "    y[:,0] += y[:,1]    \n",
-    "    \n",
-    "    # process noise \n",
-    "    y += np.random.normal(0,[0.1,0.001],x.shape)\n",
-    "    return y\n",
+    "def linear_dynamics(x):        \n",
+    "    nx = np.dot(x,np.array([[1,0],\n",
+    "                            [1,1]]))        \n",
+    "    process_sigmas = [0.1, 0.001] # how much noise for x and dx    \n",
+    "    nx += np.random.normal(0,process_sigmas,x.shape)\n",
+    "    return nx\n",
     "\n",
     "def observe_sin(x):    \n",
     "    # y = sin(x)    \n",
     "    return np.sin(x[:,0])\n",
     "\n",
     "def weight_sin(true_y, hypothesized_y):\n",
-    "    return np.exp(-np.sum((true_y-hypothesized_y)**2, axis=0)/0.5)\n",
+    "    beta = 0.5 # how like the observations we expect our simulations to be\n",
+    "    return np.exp(-np.sum((true_y-hypothesized_y)**2, axis=0)/beta)\n",
     "    \n",
     "from scipy.stats import norm\n",
-    "prior = [norm(0,0.25), norm(0,0.35)] \n",
+    "prior = [norm(0,1), norm(0,0.25)] \n",
     "\n",
     "pf_sin = pfilter.ParticleFilter(initial=prior, \n",
     "                                observe_fn=observe_sin,\n",
@@ -372,6 +497,18 @@
    "source": [
     "pf_sin.init_filter()\n",
     "plot_filter(pf_sin, t, x, t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Things to note\n",
+    "* The particle filter was able to infer the hidden state, despite only having a forward model (i.e knowledge of $\\sin(x)$, **not** $\\sin^{-1}(x)$)\n",
+    "* It correctly unwrapped phase, because we primed it with the dynamics model to expect values that would increase at a linear rate.\n",
+    "* This problem results in *multimodal* distributions, because there are an infinite number of solutions to $y=sin(x)$ because we can add any multiple of $2\\pi$ without changing anything.\n",
+    "We can see these as fainter lines on the particle plot.\n",
+    "* This means that the particle mean is not actually a good estimate in this case! (we could use the median here instead, but this is harder in higher dimensions)"
    ]
   },
   {
