Added more gesture example

--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -46,6 +46,7 @@
     "\n",
     "### What will we *practically* do?\n",
     "* We will build a 2D mouse gesture recognizer using a hybrid discrete/continuous particle filter. This will be a simple, robust classifier with rich feedback opportunities.\n",
+    "\n",
     "<img  src=\"imgs/Capture.PNG\" width=\"800px\"/>\n",
     "\n",
     "* We will build an algorithm to track finger pose from raw capacitive touch sensor readings using a continuous particle filter. We will find this works well even with a poorly specified model."
@@ -217,8 +218,15 @@
    "metadata": {},
    "source": [
     "### Use case\n",
+    "xxx\n",
+    "\n",
     "### Problem description\n",
-    "We are going to solve xxx\n",
+    "We are going to solve two simple problems. \n",
+    "\n",
+    "* Recognising simple 2D gestures, drawn with a mouse.\n",
+    "* Inferring where a finger is touching a touchscreen, from the raw capacitive sensor readings.\n",
+    "\n",
+    "Both of these are readily solved with \"standard\" (inverse) algorithms, but we will show how a model-led approach lets us encode our assumptions elegantly **and** we get all the benefits of *probabilistic* tracking. We'll see how probabilistic filters degrade gracefully when our models are bad or measurements are noisy.\n",
     "\n",
     "#### Algorithm\n",
     "We will use the **particle filter** algorithm (technically the **SIR** variant, which is the simplest to understand).\n",
@@ -637,6 +645,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Example I: Gesture recognition\n",
+    "We will base our algorithm directly on the one given by [Black and Jepson](http://www.cs.toronto.edu/~jepson/papers/BlackJepsonECCV1998.pdf).\n",
+    "\n",
+    "### Parameters\n",
+    "<img src=\"imgs/gesture.png\">\n",
+    "We might have one of $n$ possible gestures\n",
+    "* $i$ the number of the gesture\n",
+    "\n",
+    "Our model says a gesture will be identical to the template for that class of gesture, but might vary in:\n",
+    "* $s$ overall scale, within some tolerance\n",
+    "* $x,y$ centre position (could be anywhere on screen)\n",
+    "* $\\theta$ small changes in rotation (e.g. $<45^o$)\n",
+    "\n",
+    "We must take note that what we observe is a position at a **single time point** in a gesture. This means we must estimate how far through a gesture we are.\n",
+    "* $\\phi$ the proportion of gesture complete, in the fraction [0,1].\n",
+    "* $\\dot{\\phi}$ the rate at which the gesture is being performed (i.e. fast or slow).\n",
+    "\n",
+    "### Model\n",
+    "We can write down a very simple model:\n",
+    "\n",
+    "#### Observation\n",
+    "\n",
+    "* Given a gesture $i$, we have a template $G_i(\\phi)$, which is returns an point for any value of $\\phi$.\n",
+    "* We expect to observe $AG_i(\\phi)$, where $A$ is a transformation matrix applying the translation $x,y$, the scaling $s$ and the rotation $\\theta$.\n",
+    "\n",
+    "#### Priors\n",
+    "* $s_0$ $N(1,0.5)$, should be around original size, with some latitude\n",
+    "* $x_0,y_0$ $U(0,\\text{max_screen_size})$, could be anywhere on screen\n",
+    "* $\\theta_0$ $N(0,15)$, angle will be close to original, with std. dev. of ~15 degrees\n",
+    "* $\\phi_0$ $N(0,0.1)$, gestures will begin close to their start\n",
+    "* $\\dot{\\phi}_0$ N($\\mu_{\\dot{\\phi}}, \\sigma_{\\dot{\\phi}})$), gesture speeds will be distributed according to the observed speeds from the template\n",
+    "* $i_0$ discrete $U(0,n-1)$, could be any gesture\n",
+    "\n",
+    "#### Dynamics\n",
+    "* $s_{t+1} = s_{t} + \\epsilon_s$ scale can drift slowly\n",
+    "* $x_{t+1} = x_{t} + \\epsilon_x$ position can drift slowly\n",
+    "* $y_{t+1} = y_{t} + \\epsilon_y$  \n",
+    "* $\\theta_{t+1} = \\theta_{t} + \\epsilon_\\theta$ orientation can drift slowly\n",
+    "* $i_{t+1}=i_{t}$  gesture class never changes\n",
+    "* $\\phi_{t+1} = \\phi_{t} + \\dot{\\phi}_{t} + \\epsilon_y$ progress is steady, with some drift\n",
+    "* $\\dot{\\phi}_{t+1} = \\dot{\\phi}_{t} + \\epsilon_y$ progress rate can drift\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Key algorithm summary\n",
     "| Algorithm       | Dynamics       | State distribution | Efficiency | Optimizable |\n",
     "|-----------------|----------------|--------------------|------------|-----------|\n",
@@ -692,7 +749,7 @@
     "* Sometimes the inverse probability model can be hard to formulate.\n",
     "* Particle filters are simple and elegant, but inferentially weak.\n",
     "* Kalman filters are rigid and restrictive, but very inferentially efficient.\n",
-    "* Hybrid approaches (Ensemble Kalman filter, Unscented Kalman Filter, hybrid particle/Kalman filters) can trade these qualities off, but they aren't off the shelf solutions (i.e. you need an expert!).\n",
+    "* Hybrid approaches (Ensemble Kalman filter, Unscented Kalman Filter, hybrid particle/Kalman filters, Rao-Blackwellized filters) can trade these qualities off, but they aren't off the shelf solutions (i.e. you need an expert!).\n",
     "\n",
     "\n",
     "### Resources\n",
