Finger tracking image, updated intro

--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -42,14 +42,15 @@
     "* discuss how probabilistic filters can be used to attack these inference problems;\n",
     "* specifically show how motion-based interfaces can use probabilistic filtering to increase robustness.\n",
     "\n",
-    "**The main purpose of this tutorial is to think about interaction problems as inference, and introduce some practical approaches to solve them.**\n",
     "\n",
     "### What will we *practically* do?\n",
     "* We will build a 2D mouse gesture recognizer using a hybrid discrete/continuous particle filter. This will be a simple, robust classifier with rich feedback opportunities.\n",
     "\n",
-    "<img  src=\"imgs/Capture.PNG\" width=\"800px\"/>\n",
+    "<img  src=\"imgs/capture.png\" width=\"80%\"/>\n",
     "\n",
-    "* We will build an algorithm to track finger pose from raw capacitive touch sensor readings using a continuous particle filter. We will find this works well even with a poorly specified model."
+    "* We will build an algorithm to track finger pose from raw capacitive touch sensor readings using a continuous particle filter. We will find this works well even with a poorly specified model.\n",
+    "\n",
+    "<img src=\"imgs/finger_track.png\" width=\"80%\">"
    ]
   },
   {
@@ -61,21 +62,21 @@
     "#### What is probabilistic filtering ?\n",
     "One view on interaction is to see user intentions as **unknown values** which are partially observed through input sensors. The time series of inputs from the user only give a partial, noisy, incomplete view of intention inside the user's head. \n",
     "\n",
-    "Probabilistic filtering **(PF)** tracks the evolution of some unknown variables *[user intentions]* given observed evidence *[user input]*, in a way that is **robust**. Probabilistic filters infer a **distribution** over possible hidden (unobserved) variables, updating them over time. They are inherently **uncertain**, as they represent degrees of belief, and **dynamic**, as they explicitly model changing state over time.\n",
+    "Probabilistic filtering **(PF)** tracks the evolution of some unknown variables *[user intentions]* given observed evidence *[user input]*, in a way that is **robust**. Probabilistic filters infer a **distribution** over possible hidden (unobserved) variables, updating them over time. These filters are inherently **uncertain**, as they represent degrees of belief, and **dynamic**, as they explicitly model changing state over time.\n",
     "\n",
     "<img src=\"imgs/brain_inference.png\">\n",
     "\n",
     "#### Simulation viewpoint\n",
-    "These filters are really *simulators*. They *simulate* how possible user behaviours might unfold over time. In some probabilistic filters, hundreds of parallel simulators are run, each with slightly different parameters. In all cases, the simulations are adjusted online to better match observed reality. The internal parameters that drive the simulation are the *unknown variables* we want to infer and the *evidence* is the observed reality that adjusts the simulation parameters.\n",
+    "These filters are really *simulators*. They *simulate* how possible user behaviors might unfold over time. In some probabilistic filters, hundreds of parallel simulators are run, each with slightly different parameters. In all cases, the simulations are adjusted online to better match observed reality. The internal parameters that drive the simulation are the *unknown variables* we want to infer and the *evidence* is the observed reality that adjusts the simulation parameters.\n",
     "\n",
     "#### Properties\n",
     "Probabilistic filtering is:\n",
     "\n",
     "| Property | Why  |\n",
     "|----------|------|\n",
-    "|**Bayesian**  |  Represents degrees of belief using probability distributions    |\n",
-    "|**predictive**  |  Works by comparing predictions with reality   |\n",
-    "|**generative** |  Involves generating (i.e. simulating) behavior   |\n",
+    "|**Bayesian**  |  Represents degrees of belief using probability distributions.    |\n",
+    "|**predictive**  |  Works by comparing predictions with reality.   |\n",
+    "|**generative** |  Involves generating (i.e. simulating) behavior.   |\n",
     "\n",
     "-----\n",
     "Probabilistic filtering is an **inverse probability** approach, and it requires that we think of interaction from an unique perspective. We have to explicitly be able to write down:\n",
@@ -92,13 +93,14 @@
    "metadata": {},
    "source": [
     "### Why is this computational HCI?\n",
-    "Probabilistic filtering means writing down an **executable, statistical model** of user behavior, then **running an inference algorithm** that updates beliefs based on the way observations evolve. The **parameters** of the filter can be **learned from data**.\n",
+    "Probabilistic filtering means writing down an **executable, statistical model** of user behavior, then **running an inference algorithm** that updates beliefs based on the way observations evolve. The **parameters** of the filter can be **learned from user data**. The effectiveness of the filter can be quantitatively measured.\n",
     "\n",
-    "This has four key elements of computational interaction:\n",
+    "This has key elements of computational interaction:\n",
     "* an explicit mathematical model of user-system behavior;\n",
     "* a way of updating that model with observed data from users;\n",
     "* an algorithmic element that, using this model, can apply computational power to improving interaction;\n",
     "* the ability to simulate or synthesize elements of the expected user-system behavior.\n",
+    "* the ability to instrument the algorithm to quantitatively capture its performance.\n",
     "\n",
     "It satisfies the requirement that better interfaces can be achieved via:\n",
     "* improved modeling;\n",
@@ -108,6 +110,7 @@
     "\n",
     "rather than the workhorses of traditional HCI:\n",
     "* more design ingenuity;\n",
+    "* better elicitation;\n",
     "* and stronger evaluation.\n"
    ]
   },
@@ -141,7 +144,7 @@
     "* **Robustness to intermittence** PFs can continue to sensibly interpolate when input cuts out.\n",
     "* **Uncertainty estimates** PFs *know how certain they are* and this can be used in the interaction design.\n",
     "* **Decoupled from real-time** PFs can infer past (smoothing), present (filtering) and future (forecasting).\n",
-    "* **Easy fusion of multiple input sensors** PFs are often used to solely to fuse together multiple inputs from different sensors.\n",
+    "* **Inherent fusion of multiple input sensors** PFs are often used to solely to fuse together multiple inputs from different sensors.\n",
     "* **Better feedback** PFs  offer the opportunity to give users rich insight into the process of intention decoding.\n",
     "* **Flexible modeling** PFs can incorporate both fundamental modeling (e.g. physiological or cognitive models) and data-driven machine learning."
    ]
@@ -173,9 +176,9 @@
     "\n",
     "| Perspective   | Burden | Characteristic                         |\n",
     "|---------------|--------|----------------------------------------|\n",
-    "| Communication | User   | User gets information into the system. |\n",
-    "| Control       | Split  | User drives state towards intention.   |\n",
-    "| Inference     | System | Systems infers what user intention is. |\n",
+    "| Communication | User   | User gets information into the system, by encoding intentions. |\n",
+    "| Control       | Split  | User drives state towards intention via feedback control.   |\n",
+    "| Inference     | System | System infers what user intention is from sensed user actions. |\n",
     "\n",
     "### Interaction as inference\n",
     "If we view interaction as inference of intention, there are three elements:\n",
@@ -207,10 +210,14 @@
     "* We want to compute $P(X_t|Y_t)$ (the **inverse problem**). \n",
     "* We use a **forward model** $P(Y_t|X_t)$ to infer this.\n",
     "* We need to define two functions: ${\\bf\\hat{y_t}} = f({\\bf \\hat{x}}_t)$ (the **observation function**) and $\\hat{\\bf x}_{t} = g(\\hat{\\bf x}_{t-1})$ (the **dynamics** or **process function**).\n",
+    "* We also need a **weighting function** $w(\\bf\\hat{y_t},{\\bf y_t})$ that computes how similar a simulated observation $\\bf\\hat{y_t}$ is to the real observation $\\bf y_t$. This is used to compute the likelihood $p(\\bf\\hat{y_t}|{\\bf y_t})$.\n",
     "\n",
-    "* $f$ and $g$ are often very simple functions.\n",
+    "* $f$, $g$ and $w$ are often very simple functions.\n",
     "\n",
-    "<img src=\"imgs/stochastic.png\" width=\"75%\">"
+    "<img src=\"imgs/stochastic.png\" width=\"75%\">\n",
+    "\n",
+    "#### Predictor-corrector\n",
+    "**This is a predictor-corrector model**; the dynamics model supplies predictions, and corrections to those predictions are applied by the observation model."
    ]
   },
   {
@@ -646,11 +653,13 @@
    "metadata": {},
    "source": [
     "## Example I: Gesture recognition\n",
-    "We will base our algorithm directly on the one given by [Black and Jepson](http://www.cs.toronto.edu/~jepson/papers/BlackJepsonECCV1998.pdf).\n",
-    "\n",
+    "We will base our algorithm directly on the one given in [A Probabilistic Framework for Matching\n",
+    "Temporal Trajectories](http://www.cs.toronto.edu/~jepson/papers/BlackJepsonECCV1998.pdf).\n",
+    "### Problem\n",
+    "xxx\n",
     "### Parameters\n",
     "<img src=\"imgs/gesture.png\">\n",
-    "We might have one of $n$ possible gestures\n",
+    "We have one of $n$ possible gestures\n",
     "* $i$ the number of the gesture\n",
     "\n",
     "Our model says a gesture will be identical to the template for that class of gesture, but might vary in:\n",
@@ -687,7 +696,27 @@
     "* $\\phi_{t+1} = \\phi_{t} + \\dot{\\phi}_{t} + \\epsilon_y$ progress is steady, with some drift\n",
     "* $\\dot{\\phi}_{t+1} = \\dot{\\phi}_{t} + \\epsilon_y$ progress rate can drift\n",
     "\n",
-    "\n"
+    "### Code\n",
+    "#### Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example II: Finger tracking\n",
+    "The model in this section is based on [AnglePose: robust, precise capacitive touch tracking via 3d orientation estimation](http://dl.acm.org/citation.cfm?id=1979318).\n",
+    "\n",
+    "### Problem\n",
+    "### Parameters\n",
+    "### Model\n",
+    "\n",
+    "#### Observation\n",
+    "#### Priors\n",
+    "#### Dynamics\n",
+    "\n",
+    "### Code\n",
+    "#### Testing"
    ]
   },
   {
@@ -695,6 +724,12 @@
    "metadata": {},
    "source": [
     "### Key algorithm summary\n",
+    "There are many probabilistic filtering algorithms. The particle filter is easy to understand and the most general, but it can be inefficient (it can take many particles to estimate state reliably). Particle filters are the only widely-used class of algorithm which can natively support both discrete and continuous parameters.\n",
+    "\n",
+    "Alternatives, like the Kalman filter, can estimate with much less computation, but are inflexible in terms of the distributions they can represent, and the dynamics of the models they can cope with. \n",
+    "\n",
+    "There are many variants of the Kalman filter which extend it in various ways; of these the *unscented Kalman filter (UKF)* is one of the most general and applicable. The UKF can cope with arbitrary continuous dynamics, which makes it suitable for many problems where there are nonlinearities.\n",
+    "\n",
     "| Algorithm       | Dynamics       | State distribution | Efficiency | Optimizable |\n",
     "|-----------------|----------------|--------------------|------------|-----------|\n",
     "| Particle        | Arbitrary      | Arbitrary          | Low        | Tricky    |\n",
@@ -762,7 +797,8 @@
     "* [A technical but succinct and clear explanation of the particle filter](http://www.cns.nyu.edu/~eorhan/notes/particle-filtering.pdf)\n",
     "* [A bibliography of particle filter papers](http://www.stats.ox.ac.uk/~doucet/smc_resources.html)\n",
     "\n",
-    "**some more HCI related resources**"
+    "#### Probabilistic filters in HCI\n",
+    "xxx"
    ]
   },
   {
@@ -777,10 +813,24 @@
     "Much use of probabilistic filters has depended on strong mathematical models of the fundamental process. For example, in rocket science, sophisticated physics models were used to specify the Kalman filters used for stable control. \n",
     "\n",
     "However, it is becoming increasingly possible to **infer** these models from observations. Techniques such as deep learning (for example variational autoencoders or generative adversarial networks) make it possible to learn very sophisticated *generative models* from observations of\n",
-    "data.  \n",
+    "data.  These models can be dropped into probabilistic filters to produce robust inferential engines for user interaction.\n",
     "\n",
-    "These models can be dropped into probabilistic filters to produce robust inferential engines for user interaction."
+    "##### Example\n",
+    "As an illustrative example, we recently built a touch pose estimator. We trained DCNN to predict finger pose from sensor images (inverse model), a separate deconvolutional CNN to predict sensor images from finger poses (forward model) and then fused these using a particle filter.\n",
+    "\n",
+    "<img src=\"imgs/fwd_inv.png\">\n",
+    "This combined gives substantial robustness, and we were able to introduce a simple dynamics model, which filters out completely implausible movements.\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
