Before removing example code

--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -720,7 +720,7 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
