--- a/ProbabilisticFiltering.ipynb
+++ b/ProbabilisticFiltering.ipynb
@@ -132,20 +132,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### History\n",
-    "* 1960s Kalman filter (Swerling, Kalman, Bucy), Extended Kalman Filter (Schmidt)\n",
-    "* late 1960-1990s Particle filter / sequential Monte Carlo\n",
-    "* 1992 Bootstrap filter (Gordon)\n",
-    "* 1995 Unscented Kalman Filter (Uhlmann)\n",
-    "* 1998 Condensation: particle filter for vision problems (Isard and Blake) \n",
-    "\n",
-    "**We will base our model in this unit roughly on the algorithm variant proposed by Isard and Blake.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Principles \n",
     "-------\n",
     "\n",
@@ -906,181 +892,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# state vector\n",
-    "# X = [i,s,x_c,y_c,theta,phi,dot_phi]\n",
-    "import pandas as pd\n",
-    "from gestures import GestureData\n",
-    "\n",
-    "# load the data\n",
-    "gesture_data = GestureData(\"gestures.txt\")\n",
-    "\n",
-    "def scale_matrix(s):\n",
-    "    return np.diag([s,s,s])\n",
-    "\n",
-    "def translate_matrix(x,y):\n",
-    "    return np.array([[0,0,x], \n",
-    "                     [0,0,y], \n",
-    "                     [0,0,1]])\n",
-    "\n",
-    "def rotate_matrix(theta):\n",
-    "    return np.array([[np.cos(theta),-np.sin(theta),0], \n",
-    "                     [np.sin(theta),np.cos(theta),0], \n",
-    "                     [0,0,1]])\n",
-    "\n",
-    "\n",
-    "def prior_gesture():\n",
-    "    # return a new state    \n",
-    "    # here we use a Series just so that\n",
-    "    # we can name the columns directly\n",
-    "    # which makes life a bit easier\n",
-    "    x = pd.Series(\n",
-    "    {\n",
-    "        \"i\":np.random.randint(0, gestures.n),\n",
-    "        \"s\":np.random.normal(1, 0.25),\n",
-    "        \"x_c\":np.random.uniform(0, gestures.screen_size),\n",
-    "        \"y_c\":np.random.uniform(0, gestures.screen_size),\n",
-    "        \"theta\":np.random.normal(0, np.radians(15)),\n",
-    "        \"phi\":np.abs(np.random.normal(0,0.1)),\n",
-    "        \"phi_dot\": 0 # fill in later\n",
-    "    })\n",
-    "    # use the observed gesture speeds to set the prior\n",
-    "    # on the gesture phase rate\n",
-    "    p_mu, p_sig = gesture_data.get_speed(x.i)\n",
-    "    phi_dot = np.random.normal(p_mu, p_sig)\n",
-    "    return x\n",
-    "\n",
-    "# the stochastic part of the dynamics\n",
-    "sigmas = pd.Series(\n",
-    "    {\n",
-    "        \"i\":0,           # no noise on class!\n",
-    "        \"s\":0.01,        # scale\n",
-    "        \"x_c\":10.0,      # shift\n",
-    "        \"y_c\":10.0,      # shift,\n",
-    "        \"theta\":0.05,    # rotation\n",
-    "        \"phi\":0.01,      # phase\n",
-    "        \"phi_dot\": 0.001 # phase_rate\n",
-    "    })\n",
-    "\n",
-    "def dynamics_gesture(x):        \n",
-    "    # stochastic change to the state\n",
-    "    drift = np.random.normal(0, 1) * sigmas + x\n",
-    "    # apply the constant progress of phi\n",
-    "    drift.phi += drift.phi_dot\n",
-    "    return drift + sigmas\n",
-    "        \n",
-    "def observe_gesture(x):                               \n",
-    "    # note that gesture_template(phi) return x,y,1\n",
-    "    # to make it easy to translate the output\n",
-    "    template_xyw = gesture_data.get_template(x.i, x.phi)\n",
-    "    # compute the matrix for the transform\n",
-    "    Ar = rotation_matrix(x.theta) \n",
-    "    As = scale_matrix(x.s)\n",
-    "    Axy = translate_matrix(x.x_c, x.y_c)\n",
-    "    A = np.dot(As, np.dot(Ar, Axy))\n",
-    "    # apply the transform to the template\n",
-    "    expected = np.dot(template_xy, A)[0:2]\n",
-    "    return expected\n",
-    "    \n",
-    "\n",
-    "def weight_gesture(true_y, hypothesized_y):    \n",
-    "    # compare the x,y position we got to the one we expect, using\n",
-    "    # an RBF kernel\n",
-    "    return np.exp(-np.sum((true_y-hypothesized_y)**2, axis=0)/beta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 gestures recorded to gestures.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Uncomment to record new gesture templates\n",
-    "#import gestures\n",
-    "#gestures = reload(gestures)\n",
-    "#gestures.record_gestures()\n",
-    "#%gui tk"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Testing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "object of type 'function' has no len()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-36-e4eb9a725ced>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                                 \u001b[0mdynamics_fn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdynamics_gesture\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                                 \u001b[0mweight_fn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mweight_gesture\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m                                 resample_proportion=0.08)\n\u001b[0m",
-      "\u001b[0;32mc:\\users\\jhw___000\\dropbox\\pfilter\\pfilter\\pfilter.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, initial, observe_fn, n_particles, dynamics_fn, noise_fn, weight_fn, resample_proportion, column_names, internal_weight_fn)\u001b[0m\n\u001b[1;32m    104\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumn_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcolumn_names\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitial\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minitial\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minitial\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_particles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mn_particles\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobserve_fn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mobserve_fn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'function' has no len()"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# pf_gesture = pfilter.ParticleFilter(initial=prior_gesture, \n",
-    "#                                 observe_fn=observe_gesture,\n",
-    "#                                 n_particles=200,\n",
-    "#                                 dynamics_fn=dynamics_gesture,\n",
-    "#                                 weight_fn=weight_gesture,                    \n",
-    "#                                 resample_proportion=0.08)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Key algorithm summary\n",
-    "There are many probabilistic filtering algorithms. The particle filter is easy to understand and the most general, but it can be inefficient (it can take many particles to estimate state reliably). Particle filters are the only widely-used class of algorithm which can natively support both discrete and continuous parameters.\n",
-    "\n",
-    "Alternatives, like the Kalman filter, can estimate with much less computation, but are inflexible in terms of the distributions they can represent, and the dynamics of the models they can cope with. \n",
-    "\n",
-    "There are many variants of the Kalman filter which extend it in various ways; of these the *unscented Kalman filter (UKF)* is one of the most general and applicable. The UKF can cope with arbitrary continuous dynamics, which makes it suitable for many problems where there are nonlinearities.\n",
-    "\n",
-    "| Algorithm       | Dynamics       | State distribution | Efficiency | Optimizable |\n",
-    "|-----------------|----------------|--------------------|------------|-----------|\n",
-    "| Particle        | Arbitrary      | Arbitrary          | Low        | Tricky    |\n",
-    "| Kalman          | Linear         | Gaussian           | Very high  | Easy      |\n",
-    "| Extended Kalman | Locally linear | Gaussian           | High       | Yes       |\n",
-    "| Unscented Kalman| Arbitrary      | Gaussian           | High       | Tricky    |\n",
-    "| HMM             | Transitions    | Discrete           | High       | Yes       |\n",
-    "\n",
-    "* Dynamics: permissible state transition functions (i.e. how we go from now to the next timestep).\n",
-    "* State distribution: distribution type for representing current state. Gaussian distributions are very efficient, but can't represent multiple modes.\n",
-    "* Efficiency: computational efficiency.\n",
-    "* Optimizable: is there an algorithm to optimize the  parameters of the filter be *automatically* given training data?\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1104,7 +915,7 @@
     "\n",
     "* The fact that inference is performed over time is a potential advantage over \"static\" classification approaches, as feedback can be generated on the fly, instead only after completion of an action. \n",
     "\n",
-    "* In the specific context of gestures, the ability to infer the end-point of gestures can solve the \"segmentation problem\" that is often awkward and leads to kludges like button presses to segment actions.\n",
+    "* In the specific context of gestures, the ability to infer the start and end-point of gestures can solve the \"segmentation problem\" or \"gesture spotting problem\" that is often awkward and leads to kludges like button presses to segment actions.\n",
     "\n",
     "* Probabilistic motion models can easily be linked to higher-order probabilistic models which infer long-term actions on the part of the user. Because everything is a probability distribution, there is a simple common basis for integrating such models. This, for example, can include language models which estimate a distribution over text that is likely to be entered given both user input and a statistical model of language.\n",
     "\n",
